# zephyr_pcf8576

./: .gitignore  CMakeLists.txt  README.md  application.overlay  lcd.overlay  prj.ZDebug.conf  prj.ZRelease.conf  prj.ZTest.conf  prj.conf  testcase.yaml
dts/bindings/: lcd-bar.yaml  lcd-digit.yaml  lcd-lowsegment.yaml  lcd-number.yaml  lcd-sign.yaml  nxp,pcf8576.yaml
lcd/zephyr/: CMakeLists.txt  Kconfig  lcd.h  pcf8576.c  pcf8576.h
src/: main.c
